--- a/src/routes/posts/2020-04-06-static-website-hosting/document.mdx
+++ b/src/routes/posts/2020-04-06-static-website-hosting/document.mdx
@@ -1,5 +1,3 @@
-import styles from './document.module.css';
-
 import BucketSettings from './bucket-settings.png';
 import StaticHosting from './static-hosting.png';
 import CertificateManager from './certificate-manager.png';
@@ -65,7 +63,7 @@ For region, this doesn't matter too much for a static website, but make sure you
 
 The access settings should look like the following:
 
-<img className={styles['image']} src={BucketSettings} alt="Bucket settings" />
+<img src={BucketSettings} alt="Bucket settings" />
 
 ### Make sure to replace test.kalob.net with your domain
 
@@ -86,7 +84,7 @@ The access settings should look like the following:
 
 Next, click on Properties, then on Static website hosting.
 
-<img src={StaticHosting} className={styles['image']} alt="Static website hosting settings" />
+<img src={StaticHosting} alt="Static website hosting settings" />
 
 Copy the endpoint at the top of the section and keep it, we'll need it later. Mine is `http://test.kalob.net.s3-website.us-east-2.amazonaws.com`
 
@@ -106,13 +104,13 @@ When asked if we want a public or private certificate, public is the option you 
 
 Type in your domain name. If you are using a subdomain, make sure to add `*.domain.com` to the list. Here is what mine looks like.
 
-<img src={CertificateManager} className={styles['image']} alt="Certificate Manager" />
+<img src={CertificateManager} alt="Certificate Manager" />
 
 Next, follow the steps to vertif your domain.
 
 Once your certificate's status is `Issued`, you are ready to move to the next step.
 
-<img src={CertificateIssued} className={styles['image']} alt="Certificate issued" />
+<img src={CertificateIssued} alt="Certificate issued" />
 
 ----
 
