Update blog post

--- a/src/routes/posts/2020-04-11-ci-cd-jenkins/document.mdx
+++ b/src/routes/posts/2020-04-11-ci-cd-jenkins/document.mdx
@@ -180,6 +180,8 @@ after_deploy:
 
 Push your code up to `master` and watch the build take place!
 
+Travis CI builds usually take a few seconds to startup, so don't worry if it takes a second.
+
 ----
 
 > ##
