--- a/src/routes/posts/2020-04-11-ci-cd-jenkins/document.mdx
+++ b/src/routes/posts/2020-04-11-ci-cd-jenkins/document.mdx
@@ -92,8 +92,8 @@ Make sure to replace `blog.kalob.net` with your bucket name and `Porterk/kalob.n
 ```yaml
 deploy:
   provider: s3
-  access_key_id: <ACCESS_KEY>
-  secret_access_key: <SECRET_KEY>
+  access_key_id: $AWS_S3_ACCESS_KEY
+  secret_access_key: $AWS_S3_SECRET_KEY
   bucket: blog.kalob.net
   skip_cleanup: true
   local-dir: build
@@ -104,23 +104,6 @@ deploy:
 ```
 
 ----
-
-### Isn't it insecure to have my S3 secret in my repository?
-
-Yes, very. Let's fix that.
-
-You can run `travis encrypt --add deploy.secret_access_key` as described [here](https://docs.travis-ci.com/user/deployment/s3/).
-
-### Note: you must install the [travis cli](https://github.com/travis-ci/travis.rb#readme) in order for this to work.
-
-You should see your secret key replaced with this:
-
-```yaml
-secret_access_key:
-  secure: ...
-```
-
----
 
 ### After the deploy, invalidate CloudFront
 
@@ -137,7 +120,7 @@ Also, under `install` add:
 - yarn global add travis-ci-cloudfront-invalidation
 ```
 
-We will need to add `AWS_CLOUDFRONT_ACCESS_KEY` `AWS_CLOUDFRONT_SECRET` and `AWS_CLOUDFRONT_DIST_ID` as environment variables in Travis.
+We will need to add `AWS_CLOUDFRONT_ACCESS_KEY`, `AWS_CLOUDFRONT_SECRET`, `AWS_CLOUDFRONT_DIST_ID`, `AWS_S3_ACCESS_KEY`, and `AWS_S3_SECRET_KEY` as environment variables in Travis.
 
 For this step, you should follow Step 3 to create another user, but choose `CloudFrontFullAccess` for the permission set.
 
@@ -165,9 +148,8 @@ install:
 script: yarn build
 deploy:
   provider: s3
-  access_key_id: xxx
-  secret_access_key:
-    secure: xxx
+  access_key_id: $AWS_S3_ACCESS_KEY
+  secret_access_key: $AWS_S3_SECRET_KEY
   bucket: kalob.net-blog
   skip_cleanup: true
   local-dir: build
