Updates to the latest blog post

--- a/src/routes/posts/2023-06-16-my-journey/document.mdx
+++ b/src/routes/posts/2023-06-16-my-journey/document.mdx
@@ -58,21 +58,32 @@ During this time one of the founders of DeveloperTown started a sister company c
 I think DT Starts is where I got the majority of my hard skills I have today. Critical thinking skills, social skills, the art of the argument were all taught to me implicitly here. I loved & still love the team I worked with at DT Starts.
 
 After transferring in May 2017 I got a raise to $17/hr, which was absolutely amazing for me at the time. After working at DT Starts for the summer one of the portfolio companies offered me a full time position to work on their product. Much to my benefit
-DT Starts matched their offer & hired me on full time at $53,000 a year (this will be the last time I mention my salary because it isn't as relevant to the later half of this story). I decided at that time to drop out of college & start working full time.
+DT Starts matched their offer & hired me on full time at $53,000 a year (this will be the last time I mention my salary). I decided at that time to drop out of college & start working full time.
 
-I went on to spend about 5 years total at DT Starts. We did many amazing things together but I had to leave. As the companies were growing larger my lack of experience was causing me to get passed on for opportunities to move up. Feeling stuck, I had to go
+At DT starts I was a full stack engineer, quite literally. I was working primarily in React at first, then moved onto Node.js development. It was the expectation that I would be given some vague task & had to fill in the blanks. I think that is what
+has given me a leg up all these years later - it is a skill that is incredibly sought after. Some people say "I don't want to hold your hand" or equate it to speed of development, but what they are actually saying is they want you to be able to be given
+50-90% of the task & fill in the other 10-50% on your own. This is a hard skill that will take you far on its own.
+
+As I started to refine my skills as a software engineer I began to get more & more responsibility. I eventually started leading database architecture & system architecture discussions. When our CTO left to start his own company I filled his shoes as best as I could.
+
+I worked in many different industries, from fintech to book reselling & everything inbetween. It was an incredible grind, working 16+ hours some days just to make a good impression at a meeting, or to show the founders how commited I was. It was awesome but unsustainable.
+Over time I was able to replace raw grind with experience & be able to impress consistently in an 8 hour work day. Short term sacrifice for long term happiness. Today most people wouldn't recommend that path, and it is absolutely not the right path for everyone, but
+it's what worked for me.
+
+I went on to spend about 5 years total at DT Starts. We did many amazing things together but I had to leave. As the companies were growing larger my lack of experience scaling a team was causing me to get passed on for opportunities to move up. I had to go
 get the experience I was missing. After an emotional exit I moved on to Swarm Solutions.
 
 From here on out, my story isn't all that different from lots of other engineers. I continually gained experience working in different tech all the time. Working at Swarm Solutions was the first time I really felt like a senior software engineer. I was called upon
-to do a lot of problem solving in a room full of other smart & fully capable engineers.
+to do a lot of problem solving in a room full of other smart & fully capable engineers. I have been able to work on some of the largest websites in the world & some of the smallest.
 
 ## Takeaway
 
 I think I have a few lessons I learned here:
 
-1. Get your foot in the door any way you can.
+1. Get your foot in the door any way you can & be ready when your opportunity comes.
 2. If you're not passionate about programming like I am, push yourself to stay up to date with technology. Do not let the industry pass you by.
-3. Add to the conversation - speak up when you have solutions to problems. This will pay dividends in your life.
+3. Add to the conversation - speak up when you have solutions to problems. This will pay dividends in your life inside & outside of tech. (Be Alexander Hamilton, not Aaron Burr)
+4. Challenge yourself - our brains are all rotting in our skulls the older we get. We owe it to ourselves to stay sharp.
 
 ---
 
