--- a/src/routes/posts/2023-08-26-how-i-lost-50-lbs-this-summer/document.mdx
+++ b/src/routes/posts/2023-08-26-how-i-lost-50-lbs-this-summer/document.mdx
@@ -74,9 +74,9 @@ caught up in a single days weight. If you are getting obssessive over the number
 
 Notice how I didn't put anywhere that I go to the gym daily? That's because in my first 50lbs of wieght lost I didn't enter a gym once. I didn't excersize at all actually.
 
-Excersize, while good for your overall health & a possible contributor to weight loss, [diet will most likely be the greatest contributor to weight loss](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4429709/).
+Excersize is good for your overall health & a possible contributor to weight loss, but [diet will most likely be the greatest contributor to weight loss](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4429709/).
 
-However, you should do some excersize to ensure the weight you are losing is fat & not muscle.
+To be clear, you should do some excersize to ensure the weight you are losing is fat & not muscle.
 
 ### Final Thoughts
 
